# Handmade3DRenderer

./: Cargo.toml  README.md
examples/: 3dscene.rs  3dsphere.rs  analog_clock.rs  pattern_scene.rs  plane_scene.rs  projectile.rs  sphere_silhoutte.rs
src/: camera.rs  canvas.rs  color.rs  float_cmp.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  object.rs  pattern.rs  plane.rs  ray.rs  sphere.rs  vec3.rs  world.rs
tests/: intersections.rs  matrix_vec3.rs  ray_plane.rs  ray_sphere.rs
