[package]
name = "Handmade3DRenderer"
version = "0.1.0"
authors = ["Sathwik Matsa <sathwikmatsa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.0"
indicatif = {version = "0.12.0", features = ["with_rayon"]}
